test/types/records/intents/out-intent-error-array2.good
out-intent-error-array2.chpl:15: error: halt reached - assigning between arrays of different shapes in dimension 0: 1 vs. 2
